<resources>
    <string name="app_name">Tease Brain</string>
    <string name="TicTacToe">Tic Tac Toe</string>
    <string name="GuessThatNumber">Guess That Number</string>
    <string name="BrainTeaser">Brain Teaser</string>
    <string name="TeaseBrain">Tease Your Brain</string>
    <string name="StartTicTacToe">Tap to Start</string>
    <string name="CrossWin">Team Cross Win</string>
    <string name="CircleWin">Team Circle Win</string>
    <string name="playAgain">Play Again</string>
    <string name="guessThatNumberText">Guess a Number Between 1 and 100</string>
    <string name="hintGuessThatNumber">Enter Number</string>
    <string name="GuessButton">Guess</string>
    <string name="ExitButton">Exit</string>
</resources>