<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuessThatNumber">

    <com.flaviofaria.kenburnsview.KenBurnsView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/backdrop_light" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/guessThatNumberTextInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/guessThatNumberText"
        android:textAlignment="center"
        android:textColor="#AD000000"
        android:textSize="30sp" />

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/editTextID"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:textColorHint="#AD1F1F1F"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/black"
        android:layout_below="@+id/guessThatNumberTextInfo"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/numberGuess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="1"
            android:fontFamily="sans-serif-black"
            android:hint="@string/hintGuessThatNumber"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textColorHint="#757575"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/guessButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextID"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:backgroundTint="#AD1F1F1F"
        android:text="@string/GuessButton"
        android:textColor="@color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/exitButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:layout_below="@+id/guessButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#AD1F1F1F"
        android:textColor="@color/white"
        android:text="@string/ExitButton" />


</RelativeLayout>