<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/backdrop_light"
    android:layout_height="match_parent"
    tools:context=".StartPage">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ticTacToe"
        android:layout_width="204dp"
        android:layout_height="59dp"
        android:layout_centerInParent="true"
        android:background="#C0000000"
        android:backgroundTint="@color/black"
        android:fontFamily="sans-serif-black"
        android:text="@string/TicTacToe"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:backgroundTint="@color/black" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/guessThatNumber"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ticTacToe"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="#C0000000"
        android:backgroundTint="@color/black"
        android:fontFamily="sans-serif-black"
        android:text="@string/GuessThatNumber"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:backgroundTint="@color/black" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/brainTeaser"
        android:layout_width="200dp"
        android:layout_height="59dp"
        android:background="#C0000000"
        android:fontFamily="sans-serif-black"
        android:backgroundTint="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/guessThatNumber"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:backgroundTint="@color/black"
        android:text="@string/BrainTeaser" />
</RelativeLayout>

