<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TicTacToe">

    <com.flaviofaria.kenburnsview.KenBurnsView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/backdrop_light" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/board"
        android:layout_width="350dp"
        android:layout_height="370dp"
        android:layout_centerInParent="true"
        android:background="@drawable/tictactoe_day"
        app:columnCount="3"
        app:rowCount="3" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tapToStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="40dp"
        android:text="@string/StartTicTacToe"
        android:textColor="#D9026EAC"
        android:textSize="50sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/winnerAnnounce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tapToStart"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/CrossWin"
        android:textColor="#D9026EAC"
        android:textSize="30sp"
        android:visibility="gone"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/playAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/board"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:backgroundTint="#D9026EAC"
        android:fontFamily="sans-serif-black"
        android:text="@string/playAgain"
        android:textColor="@color/white" />

</RelativeLayout>